parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABRIRLLAVES
    CERRARLLAVES
    PUNTOYCOMA

Grammar

Rule 0     S' -> assignVariable
Rule 1     assignVariable -> VARIABLE IGUAL expr
Rule 2     assignVariable -> VARIABLE IGUAL STRING
Rule 3     assignVariable -> VARIABLE IGUAL lambda
Rule 4     assignVariable -> VARIABLE IGUAL filter
Rule 5     assignVariable -> VARIABLE IGUAL map
Rule 6     assignVariable -> VARIABLE IGUAL reduce
Rule 7     assignVariable -> VARIABLE IGUAL lista
Rule 8     lista -> ABRIRCORCHETE lisString CERRARCORCHETE
Rule 9     lista -> ABRIRCORCHETE lisInt CERRARCORCHETE
Rule 10    lisString -> lisString COMA STRING
Rule 11    lisString -> STRING
Rule 12    lisInt -> lisInt COMA NUMERO
Rule 13    lisInt -> NUMERO
Rule 14    condicion -> IGUAL IGUAL
Rule 15    condicion -> EXCLAMACION IGUAL
Rule 16    condicion -> MAYORQUE IGUAL
Rule 17    condicion -> MENORQUE IGUAL
Rule 18    condicion -> MAYORQUE
Rule 19    condicion -> MENORQUE
Rule 20    evaluarCondicion -> expr condicion expr
Rule 21    evaluarCondicion -> BOOLEANO
Rule 22    evaluarCondicion -> expr IGUAL IGUAL BOOLEANO
Rule 23    evaluarCondicion -> expr EXCLAMACION IGUAL BOOLEANO
Rule 24    evaluarCondicion -> evaluarCondicion OPERADORLOGICO evaluarCondicion
Rule 25    expr -> expr MAS term
Rule 26    expr -> ABRIRPARENTESIS expr MAS term CERRARPARENTESIS
Rule 27    expr -> expr MENOS term
Rule 28    expr -> ABRIRPARENTESIS expr MENOS term CERRARPARENTESIS
Rule 29    expr -> term
Rule 30    term -> term POR term
Rule 31    term -> term DIVIDIR term
Rule 32    term -> ABRIRPARENTESIS term POR NUMERO CERRARPARENTESIS
Rule 33    term -> ABRIRPARENTESIS term DIVIDIR NUMERO CERRARPARENTESIS
Rule 34    term -> NUMERO
Rule 35    term -> VARIABLE
Rule 36    term -> STRING
Rule 37    term -> ABRIRPARENTESIS term POR term CERRARPARENTESIS
Rule 38    term -> ABRIRPARENTESIS term DIVIDIR term CERRARPARENTESIS
Rule 39    parametros -> parametros COMA VARIABLE
Rule 40    parametros -> VARIABLE
Rule 41    parametros -> parametros COMA assignVariable
Rule 42    parametros -> assignVariable
Rule 43    parametros -> <empty>
Rule 44    cualquierCosa -> STRING
Rule 45    cualquierCosa -> NUMERO
Rule 46    cualquierCosa -> VARIABLE
Rule 47    map -> MAPA ABRIRPARENTESIS lambda COMA VARIABLE CERRARPARENTESIS
Rule 48    map -> MAPA ABRIRPARENTESIS lambda COMA lista CERRARPARENTESIS
Rule 49    filter -> FILTER ABRIRPARENTESIS lambda COMA VARIABLE CERRARPARENTESIS
Rule 50    filter -> FILTER ABRIRPARENTESIS lambda COMA lista CERRARPARENTESIS
Rule 51    reduce -> REDUCE ABRIRPARENTESIS lambda COMA VARIABLE CERRARPARENTESIS
Rule 52    reduce -> REDUCE ABRIRPARENTESIS lambda COMA lista CERRARPARENTESIS
Rule 53    lambda -> LAMBDA parametros DOSPUNTOS expr
Rule 54    lambda -> LAMBDA parametros DOSPUNTOS evaluarCondicion
Rule 55    lambda -> LAMBDA parametros DOSPUNTOS INT IF evaluarCondicion ELSE cualquierCosa
Rule 56    lambda -> LAMBDA parametros DOSPUNTOS STR IF evaluarCondicion ELSE cualquierCosa
Rule 57    filter -> FILTER error
Rule 58    assignVariable -> VARIABLE IGUAL expr error

Terminals, with rules where they appear

ABRIRCORCHETE        : 8 9
ABRIRLLAVES          : 
ABRIRPARENTESIS      : 26 28 32 33 37 38 47 48 49 50 51 52
BOOLEANO             : 21 22 23
CERRARCORCHETE       : 8 9
CERRARLLAVES         : 
CERRARPARENTESIS     : 26 28 32 33 37 38 47 48 49 50 51 52
COMA                 : 10 12 39 41 47 48 49 50 51 52
DIVIDIR              : 31 33 38
DOSPUNTOS            : 53 54 55 56
ELSE                 : 55 56
EXCLAMACION          : 15 23
FILTER               : 49 50 57
IF                   : 55 56
IGUAL                : 1 2 3 4 5 6 7 14 14 15 16 17 22 22 23 58
INT                  : 55
LAMBDA               : 53 54 55 56
MAPA                 : 47 48
MAS                  : 25 26
MAYORQUE             : 16 18
MENORQUE             : 17 19
MENOS                : 27 28
NUMERO               : 12 13 32 33 34 45
OPERADORLOGICO       : 24
POR                  : 30 32 37
PUNTOYCOMA           : 
REDUCE               : 51 52
STR                  : 56
STRING               : 2 10 11 36 44
VARIABLE             : 1 2 3 4 5 6 7 35 39 40 46 47 49 51 58
error                : 57 58

Nonterminals, with rules where they appear

assignVariable       : 41 42 0
condicion            : 20
cualquierCosa        : 55 56
evaluarCondicion     : 24 24 54 55 56
expr                 : 1 20 20 22 23 25 26 27 28 53 58
filter               : 4
lambda               : 3 47 48 49 50 51 52
lisInt               : 9 12
lisString            : 8 10
lista                : 7 48 50 52
map                  : 5
parametros           : 39 41 53 54 55 56
reduce               : 6
term                 : 25 26 27 28 29 30 30 31 31 32 33 37 37 38 38

Parsing method: LALR

state 0

    (0) S' -> . assignVariable
    (1) assignVariable -> . VARIABLE IGUAL expr
    (2) assignVariable -> . VARIABLE IGUAL STRING
    (3) assignVariable -> . VARIABLE IGUAL lambda
    (4) assignVariable -> . VARIABLE IGUAL filter
    (5) assignVariable -> . VARIABLE IGUAL map
    (6) assignVariable -> . VARIABLE IGUAL reduce
    (7) assignVariable -> . VARIABLE IGUAL lista
    (58) assignVariable -> . VARIABLE IGUAL expr error

    VARIABLE        shift and go to state 2

    assignVariable                 shift and go to state 1

state 1

    (0) S' -> assignVariable .



state 2

    (1) assignVariable -> VARIABLE . IGUAL expr
    (2) assignVariable -> VARIABLE . IGUAL STRING
    (3) assignVariable -> VARIABLE . IGUAL lambda
    (4) assignVariable -> VARIABLE . IGUAL filter
    (5) assignVariable -> VARIABLE . IGUAL map
    (6) assignVariable -> VARIABLE . IGUAL reduce
    (7) assignVariable -> VARIABLE . IGUAL lista
    (58) assignVariable -> VARIABLE . IGUAL expr error

    IGUAL           shift and go to state 3


state 3

    (1) assignVariable -> VARIABLE IGUAL . expr
    (2) assignVariable -> VARIABLE IGUAL . STRING
    (3) assignVariable -> VARIABLE IGUAL . lambda
    (4) assignVariable -> VARIABLE IGUAL . filter
    (5) assignVariable -> VARIABLE IGUAL . map
    (6) assignVariable -> VARIABLE IGUAL . reduce
    (7) assignVariable -> VARIABLE IGUAL . lista
    (58) assignVariable -> VARIABLE IGUAL . expr error
    (25) expr -> . expr MAS term
    (26) expr -> . ABRIRPARENTESIS expr MAS term CERRARPARENTESIS
    (27) expr -> . expr MENOS term
    (28) expr -> . ABRIRPARENTESIS expr MENOS term CERRARPARENTESIS
    (29) expr -> . term
    (53) lambda -> . LAMBDA parametros DOSPUNTOS expr
    (54) lambda -> . LAMBDA parametros DOSPUNTOS evaluarCondicion
    (55) lambda -> . LAMBDA parametros DOSPUNTOS INT IF evaluarCondicion ELSE cualquierCosa
    (56) lambda -> . LAMBDA parametros DOSPUNTOS STR IF evaluarCondicion ELSE cualquierCosa
    (49) filter -> . FILTER ABRIRPARENTESIS lambda COMA VARIABLE CERRARPARENTESIS
    (50) filter -> . FILTER ABRIRPARENTESIS lambda COMA lista CERRARPARENTESIS
    (57) filter -> . FILTER error
    (47) map -> . MAPA ABRIRPARENTESIS lambda COMA VARIABLE CERRARPARENTESIS
    (48) map -> . MAPA ABRIRPARENTESIS lambda COMA lista CERRARPARENTESIS
    (51) reduce -> . REDUCE ABRIRPARENTESIS lambda COMA VARIABLE CERRARPARENTESIS
    (52) reduce -> . REDUCE ABRIRPARENTESIS lambda COMA lista CERRARPARENTESIS
    (8) lista -> . ABRIRCORCHETE lisString CERRARCORCHETE
    (9) lista -> . ABRIRCORCHETE lisInt CERRARCORCHETE
    (30) term -> . term POR term
    (31) term -> . term DIVIDIR term
    (32) term -> . ABRIRPARENTESIS term POR NUMERO CERRARPARENTESIS
    (33) term -> . ABRIRPARENTESIS term DIVIDIR NUMERO CERRARPARENTESIS
    (34) term -> . NUMERO
    (35) term -> . VARIABLE
    (36) term -> . STRING
    (37) term -> . ABRIRPARENTESIS term POR term CERRARPARENTESIS
    (38) term -> . ABRIRPARENTESIS term DIVIDIR term CERRARPARENTESIS

    STRING          shift and go to state 6
    ABRIRPARENTESIS shift and go to state 13
    LAMBDA          shift and go to state 14
    FILTER          shift and go to state 15
    MAPA            shift and go to state 16
    REDUCE          shift and go to state 17
    ABRIRCORCHETE   shift and go to state 18
    NUMERO          shift and go to state 19
    VARIABLE        shift and go to state 4

    expr                           shift and go to state 5
    lambda                         shift and go to state 7
    filter                         shift and go to state 8
    map                            shift and go to state 9
    reduce                         shift and go to state 10
    lista                          shift and go to state 11
    term                           shift and go to state 12

state 4

    (35) term -> VARIABLE .

    POR             reduce using rule 35 (term -> VARIABLE .)
    DIVIDIR         reduce using rule 35 (term -> VARIABLE .)
    error           reduce using rule 35 (term -> VARIABLE .)
    MAS             reduce using rule 35 (term -> VARIABLE .)
    MENOS           reduce using rule 35 (term -> VARIABLE .)
    $end            reduce using rule 35 (term -> VARIABLE .)
    DOSPUNTOS       reduce using rule 35 (term -> VARIABLE .)
    COMA            reduce using rule 35 (term -> VARIABLE .)
    IGUAL           reduce using rule 35 (term -> VARIABLE .)
    EXCLAMACION     reduce using rule 35 (term -> VARIABLE .)
    MAYORQUE        reduce using rule 35 (term -> VARIABLE .)
    MENORQUE        reduce using rule 35 (term -> VARIABLE .)
    OPERADORLOGICO  reduce using rule 35 (term -> VARIABLE .)
    ELSE            reduce using rule 35 (term -> VARIABLE .)
    CERRARPARENTESIS reduce using rule 35 (term -> VARIABLE .)


state 5

    (1) assignVariable -> VARIABLE IGUAL expr .
    (58) assignVariable -> VARIABLE IGUAL expr . error
    (25) expr -> expr . MAS term
    (27) expr -> expr . MENOS term

    $end            reduce using rule 1 (assignVariable -> VARIABLE IGUAL expr .)
    DOSPUNTOS       reduce using rule 1 (assignVariable -> VARIABLE IGUAL expr .)
    COMA            reduce using rule 1 (assignVariable -> VARIABLE IGUAL expr .)
    error           shift and go to state 20
    MAS             shift and go to state 21
    MENOS           shift and go to state 22


state 6

    (2) assignVariable -> VARIABLE IGUAL STRING .
    (36) term -> STRING .

  ! reduce/reduce conflict for $end resolved using rule 2 (assignVariable -> VARIABLE IGUAL STRING .)
  ! reduce/reduce conflict for DOSPUNTOS resolved using rule 2 (assignVariable -> VARIABLE IGUAL STRING .)
  ! reduce/reduce conflict for COMA resolved using rule 2 (assignVariable -> VARIABLE IGUAL STRING .)
    $end            reduce using rule 2 (assignVariable -> VARIABLE IGUAL STRING .)
    DOSPUNTOS       reduce using rule 2 (assignVariable -> VARIABLE IGUAL STRING .)
    COMA            reduce using rule 2 (assignVariable -> VARIABLE IGUAL STRING .)
    POR             reduce using rule 36 (term -> STRING .)
    DIVIDIR         reduce using rule 36 (term -> STRING .)
    error           reduce using rule 36 (term -> STRING .)
    MAS             reduce using rule 36 (term -> STRING .)
    MENOS           reduce using rule 36 (term -> STRING .)

  ! $end            [ reduce using rule 36 (term -> STRING .) ]
  ! DOSPUNTOS       [ reduce using rule 36 (term -> STRING .) ]
  ! COMA            [ reduce using rule 36 (term -> STRING .) ]


state 7

    (3) assignVariable -> VARIABLE IGUAL lambda .

    $end            reduce using rule 3 (assignVariable -> VARIABLE IGUAL lambda .)
    DOSPUNTOS       reduce using rule 3 (assignVariable -> VARIABLE IGUAL lambda .)
    COMA            reduce using rule 3 (assignVariable -> VARIABLE IGUAL lambda .)


state 8

    (4) assignVariable -> VARIABLE IGUAL filter .

    $end            reduce using rule 4 (assignVariable -> VARIABLE IGUAL filter .)
    DOSPUNTOS       reduce using rule 4 (assignVariable -> VARIABLE IGUAL filter .)
    COMA            reduce using rule 4 (assignVariable -> VARIABLE IGUAL filter .)


state 9

    (5) assignVariable -> VARIABLE IGUAL map .

    $end            reduce using rule 5 (assignVariable -> VARIABLE IGUAL map .)
    DOSPUNTOS       reduce using rule 5 (assignVariable -> VARIABLE IGUAL map .)
    COMA            reduce using rule 5 (assignVariable -> VARIABLE IGUAL map .)


state 10

    (6) assignVariable -> VARIABLE IGUAL reduce .

    $end            reduce using rule 6 (assignVariable -> VARIABLE IGUAL reduce .)
    DOSPUNTOS       reduce using rule 6 (assignVariable -> VARIABLE IGUAL reduce .)
    COMA            reduce using rule 6 (assignVariable -> VARIABLE IGUAL reduce .)


state 11

    (7) assignVariable -> VARIABLE IGUAL lista .

    $end            reduce using rule 7 (assignVariable -> VARIABLE IGUAL lista .)
    DOSPUNTOS       reduce using rule 7 (assignVariable -> VARIABLE IGUAL lista .)
    COMA            reduce using rule 7 (assignVariable -> VARIABLE IGUAL lista .)


state 12

    (29) expr -> term .
    (30) term -> term . POR term
    (31) term -> term . DIVIDIR term

    error           reduce using rule 29 (expr -> term .)
    MAS             reduce using rule 29 (expr -> term .)
    MENOS           reduce using rule 29 (expr -> term .)
    $end            reduce using rule 29 (expr -> term .)
    DOSPUNTOS       reduce using rule 29 (expr -> term .)
    COMA            reduce using rule 29 (expr -> term .)
    IGUAL           reduce using rule 29 (expr -> term .)
    EXCLAMACION     reduce using rule 29 (expr -> term .)
    MAYORQUE        reduce using rule 29 (expr -> term .)
    MENORQUE        reduce using rule 29 (expr -> term .)
    OPERADORLOGICO  reduce using rule 29 (expr -> term .)
    ELSE            reduce using rule 29 (expr -> term .)
    POR             shift and go to state 23
    DIVIDIR         shift and go to state 24


state 13

    (26) expr -> ABRIRPARENTESIS . expr MAS term CERRARPARENTESIS
    (28) expr -> ABRIRPARENTESIS . expr MENOS term CERRARPARENTESIS
    (32) term -> ABRIRPARENTESIS . term POR NUMERO CERRARPARENTESIS
    (33) term -> ABRIRPARENTESIS . term DIVIDIR NUMERO CERRARPARENTESIS
    (37) term -> ABRIRPARENTESIS . term POR term CERRARPARENTESIS
    (38) term -> ABRIRPARENTESIS . term DIVIDIR term CERRARPARENTESIS
    (25) expr -> . expr MAS term
    (26) expr -> . ABRIRPARENTESIS expr MAS term CERRARPARENTESIS
    (27) expr -> . expr MENOS term
    (28) expr -> . ABRIRPARENTESIS expr MENOS term CERRARPARENTESIS
    (29) expr -> . term
    (30) term -> . term POR term
    (31) term -> . term DIVIDIR term
    (32) term -> . ABRIRPARENTESIS term POR NUMERO CERRARPARENTESIS
    (33) term -> . ABRIRPARENTESIS term DIVIDIR NUMERO CERRARPARENTESIS
    (34) term -> . NUMERO
    (35) term -> . VARIABLE
    (36) term -> . STRING
    (37) term -> . ABRIRPARENTESIS term POR term CERRARPARENTESIS
    (38) term -> . ABRIRPARENTESIS term DIVIDIR term CERRARPARENTESIS

    ABRIRPARENTESIS shift and go to state 13
    NUMERO          shift and go to state 19
    VARIABLE        shift and go to state 4
    STRING          shift and go to state 27

    expr                           shift and go to state 25
    term                           shift and go to state 26

state 14

    (53) lambda -> LAMBDA . parametros DOSPUNTOS expr
    (54) lambda -> LAMBDA . parametros DOSPUNTOS evaluarCondicion
    (55) lambda -> LAMBDA . parametros DOSPUNTOS INT IF evaluarCondicion ELSE cualquierCosa
    (56) lambda -> LAMBDA . parametros DOSPUNTOS STR IF evaluarCondicion ELSE cualquierCosa
    (39) parametros -> . parametros COMA VARIABLE
    (40) parametros -> . VARIABLE
    (41) parametros -> . parametros COMA assignVariable
    (42) parametros -> . assignVariable
    (43) parametros -> .
    (1) assignVariable -> . VARIABLE IGUAL expr
    (2) assignVariable -> . VARIABLE IGUAL STRING
    (3) assignVariable -> . VARIABLE IGUAL lambda
    (4) assignVariable -> . VARIABLE IGUAL filter
    (5) assignVariable -> . VARIABLE IGUAL map
    (6) assignVariable -> . VARIABLE IGUAL reduce
    (7) assignVariable -> . VARIABLE IGUAL lista
    (58) assignVariable -> . VARIABLE IGUAL expr error

    VARIABLE        shift and go to state 29
    DOSPUNTOS       reduce using rule 43 (parametros -> .)
    COMA            reduce using rule 43 (parametros -> .)

    parametros                     shift and go to state 28
    assignVariable                 shift and go to state 30

state 15

    (49) filter -> FILTER . ABRIRPARENTESIS lambda COMA VARIABLE CERRARPARENTESIS
    (50) filter -> FILTER . ABRIRPARENTESIS lambda COMA lista CERRARPARENTESIS
    (57) filter -> FILTER . error

    ABRIRPARENTESIS shift and go to state 31
    error           shift and go to state 32


state 16

    (47) map -> MAPA . ABRIRPARENTESIS lambda COMA VARIABLE CERRARPARENTESIS
    (48) map -> MAPA . ABRIRPARENTESIS lambda COMA lista CERRARPARENTESIS

    ABRIRPARENTESIS shift and go to state 33


state 17

    (51) reduce -> REDUCE . ABRIRPARENTESIS lambda COMA VARIABLE CERRARPARENTESIS
    (52) reduce -> REDUCE . ABRIRPARENTESIS lambda COMA lista CERRARPARENTESIS

    ABRIRPARENTESIS shift and go to state 34


state 18

    (8) lista -> ABRIRCORCHETE . lisString CERRARCORCHETE
    (9) lista -> ABRIRCORCHETE . lisInt CERRARCORCHETE
    (10) lisString -> . lisString COMA STRING
    (11) lisString -> . STRING
    (12) lisInt -> . lisInt COMA NUMERO
    (13) lisInt -> . NUMERO

    STRING          shift and go to state 37
    NUMERO          shift and go to state 38

    lisString                      shift and go to state 35
    lisInt                         shift and go to state 36

state 19

    (34) term -> NUMERO .

    POR             reduce using rule 34 (term -> NUMERO .)
    DIVIDIR         reduce using rule 34 (term -> NUMERO .)
    error           reduce using rule 34 (term -> NUMERO .)
    MAS             reduce using rule 34 (term -> NUMERO .)
    MENOS           reduce using rule 34 (term -> NUMERO .)
    $end            reduce using rule 34 (term -> NUMERO .)
    DOSPUNTOS       reduce using rule 34 (term -> NUMERO .)
    COMA            reduce using rule 34 (term -> NUMERO .)
    IGUAL           reduce using rule 34 (term -> NUMERO .)
    EXCLAMACION     reduce using rule 34 (term -> NUMERO .)
    MAYORQUE        reduce using rule 34 (term -> NUMERO .)
    MENORQUE        reduce using rule 34 (term -> NUMERO .)
    OPERADORLOGICO  reduce using rule 34 (term -> NUMERO .)
    ELSE            reduce using rule 34 (term -> NUMERO .)
    CERRARPARENTESIS reduce using rule 34 (term -> NUMERO .)


state 20

    (58) assignVariable -> VARIABLE IGUAL expr error .

    $end            reduce using rule 58 (assignVariable -> VARIABLE IGUAL expr error .)
    DOSPUNTOS       reduce using rule 58 (assignVariable -> VARIABLE IGUAL expr error .)
    COMA            reduce using rule 58 (assignVariable -> VARIABLE IGUAL expr error .)


state 21

    (25) expr -> expr MAS . term
    (30) term -> . term POR term
    (31) term -> . term DIVIDIR term
    (32) term -> . ABRIRPARENTESIS term POR NUMERO CERRARPARENTESIS
    (33) term -> . ABRIRPARENTESIS term DIVIDIR NUMERO CERRARPARENTESIS
    (34) term -> . NUMERO
    (35) term -> . VARIABLE
    (36) term -> . STRING
    (37) term -> . ABRIRPARENTESIS term POR term CERRARPARENTESIS
    (38) term -> . ABRIRPARENTESIS term DIVIDIR term CERRARPARENTESIS

    ABRIRPARENTESIS shift and go to state 40
    NUMERO          shift and go to state 19
    VARIABLE        shift and go to state 4
    STRING          shift and go to state 27

    term                           shift and go to state 39

state 22

    (27) expr -> expr MENOS . term
    (30) term -> . term POR term
    (31) term -> . term DIVIDIR term
    (32) term -> . ABRIRPARENTESIS term POR NUMERO CERRARPARENTESIS
    (33) term -> . ABRIRPARENTESIS term DIVIDIR NUMERO CERRARPARENTESIS
    (34) term -> . NUMERO
    (35) term -> . VARIABLE
    (36) term -> . STRING
    (37) term -> . ABRIRPARENTESIS term POR term CERRARPARENTESIS
    (38) term -> . ABRIRPARENTESIS term DIVIDIR term CERRARPARENTESIS

    ABRIRPARENTESIS shift and go to state 40
    NUMERO          shift and go to state 19
    VARIABLE        shift and go to state 4
    STRING          shift and go to state 27

    term                           shift and go to state 41

state 23

    (30) term -> term POR . term
    (30) term -> . term POR term
    (31) term -> . term DIVIDIR term
    (32) term -> . ABRIRPARENTESIS term POR NUMERO CERRARPARENTESIS
    (33) term -> . ABRIRPARENTESIS term DIVIDIR NUMERO CERRARPARENTESIS
    (34) term -> . NUMERO
    (35) term -> . VARIABLE
    (36) term -> . STRING
    (37) term -> . ABRIRPARENTESIS term POR term CERRARPARENTESIS
    (38) term -> . ABRIRPARENTESIS term DIVIDIR term CERRARPARENTESIS

    ABRIRPARENTESIS shift and go to state 40
    NUMERO          shift and go to state 19
    VARIABLE        shift and go to state 4
    STRING          shift and go to state 27

    term                           shift and go to state 42

state 24

    (31) term -> term DIVIDIR . term
    (30) term -> . term POR term
    (31) term -> . term DIVIDIR term
    (32) term -> . ABRIRPARENTESIS term POR NUMERO CERRARPARENTESIS
    (33) term -> . ABRIRPARENTESIS term DIVIDIR NUMERO CERRARPARENTESIS
    (34) term -> . NUMERO
    (35) term -> . VARIABLE
    (36) term -> . STRING
    (37) term -> . ABRIRPARENTESIS term POR term CERRARPARENTESIS
    (38) term -> . ABRIRPARENTESIS term DIVIDIR term CERRARPARENTESIS

    ABRIRPARENTESIS shift and go to state 40
    NUMERO          shift and go to state 19
    VARIABLE        shift and go to state 4
    STRING          shift and go to state 27

    term                           shift and go to state 43

state 25

    (26) expr -> ABRIRPARENTESIS expr . MAS term CERRARPARENTESIS
    (28) expr -> ABRIRPARENTESIS expr . MENOS term CERRARPARENTESIS
    (25) expr -> expr . MAS term
    (27) expr -> expr . MENOS term

    MAS             shift and go to state 44
    MENOS           shift and go to state 45


state 26

    (32) term -> ABRIRPARENTESIS term . POR NUMERO CERRARPARENTESIS
    (33) term -> ABRIRPARENTESIS term . DIVIDIR NUMERO CERRARPARENTESIS
    (37) term -> ABRIRPARENTESIS term . POR term CERRARPARENTESIS
    (38) term -> ABRIRPARENTESIS term . DIVIDIR term CERRARPARENTESIS
    (29) expr -> term .
    (30) term -> term . POR term
    (31) term -> term . DIVIDIR term

    POR             shift and go to state 46
    DIVIDIR         shift and go to state 47
    MAS             reduce using rule 29 (expr -> term .)
    MENOS           reduce using rule 29 (expr -> term .)


state 27

    (36) term -> STRING .

    POR             reduce using rule 36 (term -> STRING .)
    DIVIDIR         reduce using rule 36 (term -> STRING .)
    MAS             reduce using rule 36 (term -> STRING .)
    MENOS           reduce using rule 36 (term -> STRING .)
    error           reduce using rule 36 (term -> STRING .)
    $end            reduce using rule 36 (term -> STRING .)
    DOSPUNTOS       reduce using rule 36 (term -> STRING .)
    COMA            reduce using rule 36 (term -> STRING .)
    IGUAL           reduce using rule 36 (term -> STRING .)
    EXCLAMACION     reduce using rule 36 (term -> STRING .)
    MAYORQUE        reduce using rule 36 (term -> STRING .)
    MENORQUE        reduce using rule 36 (term -> STRING .)
    OPERADORLOGICO  reduce using rule 36 (term -> STRING .)
    ELSE            reduce using rule 36 (term -> STRING .)
    CERRARPARENTESIS reduce using rule 36 (term -> STRING .)


state 28

    (53) lambda -> LAMBDA parametros . DOSPUNTOS expr
    (54) lambda -> LAMBDA parametros . DOSPUNTOS evaluarCondicion
    (55) lambda -> LAMBDA parametros . DOSPUNTOS INT IF evaluarCondicion ELSE cualquierCosa
    (56) lambda -> LAMBDA parametros . DOSPUNTOS STR IF evaluarCondicion ELSE cualquierCosa
    (39) parametros -> parametros . COMA VARIABLE
    (41) parametros -> parametros . COMA assignVariable

    DOSPUNTOS       shift and go to state 48
    COMA            shift and go to state 49


state 29

    (40) parametros -> VARIABLE .
    (1) assignVariable -> VARIABLE . IGUAL expr
    (2) assignVariable -> VARIABLE . IGUAL STRING
    (3) assignVariable -> VARIABLE . IGUAL lambda
    (4) assignVariable -> VARIABLE . IGUAL filter
    (5) assignVariable -> VARIABLE . IGUAL map
    (6) assignVariable -> VARIABLE . IGUAL reduce
    (7) assignVariable -> VARIABLE . IGUAL lista
    (58) assignVariable -> VARIABLE . IGUAL expr error

    DOSPUNTOS       reduce using rule 40 (parametros -> VARIABLE .)
    COMA            reduce using rule 40 (parametros -> VARIABLE .)
    IGUAL           shift and go to state 3


state 30

    (42) parametros -> assignVariable .

    DOSPUNTOS       reduce using rule 42 (parametros -> assignVariable .)
    COMA            reduce using rule 42 (parametros -> assignVariable .)


state 31

    (49) filter -> FILTER ABRIRPARENTESIS . lambda COMA VARIABLE CERRARPARENTESIS
    (50) filter -> FILTER ABRIRPARENTESIS . lambda COMA lista CERRARPARENTESIS
    (53) lambda -> . LAMBDA parametros DOSPUNTOS expr
    (54) lambda -> . LAMBDA parametros DOSPUNTOS evaluarCondicion
    (55) lambda -> . LAMBDA parametros DOSPUNTOS INT IF evaluarCondicion ELSE cualquierCosa
    (56) lambda -> . LAMBDA parametros DOSPUNTOS STR IF evaluarCondicion ELSE cualquierCosa

    LAMBDA          shift and go to state 14

    lambda                         shift and go to state 50

state 32

    (57) filter -> FILTER error .

    $end            reduce using rule 57 (filter -> FILTER error .)
    DOSPUNTOS       reduce using rule 57 (filter -> FILTER error .)
    COMA            reduce using rule 57 (filter -> FILTER error .)


state 33

    (47) map -> MAPA ABRIRPARENTESIS . lambda COMA VARIABLE CERRARPARENTESIS
    (48) map -> MAPA ABRIRPARENTESIS . lambda COMA lista CERRARPARENTESIS
    (53) lambda -> . LAMBDA parametros DOSPUNTOS expr
    (54) lambda -> . LAMBDA parametros DOSPUNTOS evaluarCondicion
    (55) lambda -> . LAMBDA parametros DOSPUNTOS INT IF evaluarCondicion ELSE cualquierCosa
    (56) lambda -> . LAMBDA parametros DOSPUNTOS STR IF evaluarCondicion ELSE cualquierCosa

    LAMBDA          shift and go to state 14

    lambda                         shift and go to state 51

state 34

    (51) reduce -> REDUCE ABRIRPARENTESIS . lambda COMA VARIABLE CERRARPARENTESIS
    (52) reduce -> REDUCE ABRIRPARENTESIS . lambda COMA lista CERRARPARENTESIS
    (53) lambda -> . LAMBDA parametros DOSPUNTOS expr
    (54) lambda -> . LAMBDA parametros DOSPUNTOS evaluarCondicion
    (55) lambda -> . LAMBDA parametros DOSPUNTOS INT IF evaluarCondicion ELSE cualquierCosa
    (56) lambda -> . LAMBDA parametros DOSPUNTOS STR IF evaluarCondicion ELSE cualquierCosa

    LAMBDA          shift and go to state 14

    lambda                         shift and go to state 52

state 35

    (8) lista -> ABRIRCORCHETE lisString . CERRARCORCHETE
    (10) lisString -> lisString . COMA STRING

    CERRARCORCHETE  shift and go to state 53
    COMA            shift and go to state 54


state 36

    (9) lista -> ABRIRCORCHETE lisInt . CERRARCORCHETE
    (12) lisInt -> lisInt . COMA NUMERO

    CERRARCORCHETE  shift and go to state 55
    COMA            shift and go to state 56


state 37

    (11) lisString -> STRING .
